<resources>
    <string name="app_name">Asqqui</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_ssn">Social Security Number</string>
    <string name="action_sign_in">Sign in ></string>
    <string name="action_register">Register</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="text_body_font_family">sans-serif-light</string>

    <string name="text_headline_font_family">sans-serif-medium</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>


    <string name="candidate_name">Dilmala</string>
    <string name="candidate_short_description">blablabla balbal bal balbabalbal abllab albalablba blablabla balbal bal balbabalbal abllab albalablba
     blablabla balbal bal balbabalbal abllab albalablba blablabla balbal bal balbabalbal abllab albalablba</string>
    <string name="title_activity_detail">DetailActivity</string>
</resources>
