<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/register_action_button"
        android:layout_width="@dimen/floating_button_size"
        android:layout_height="@dimen/floating_button_size"
        android:src="@drawable/ic_arrow_foward"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_gravity="bottom|right|end" />

    <com.example.luis.asqqui.custom_views.NonFocusingScrollView
        android:id="@+id/doctor_register_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/header_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="232dp"
                android:src="@drawable/blue_white_gradient" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:onClick="RotateImage"
                android:src="@android:drawable/ic_menu_rotate"
                android:layout_toRightOf="@+id/register_image"
                android:layout_alignBottom="@+id/register_image"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/register_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:onClick="GetAPhoto"
                android:src="@drawable/add_photo_icon"
                app:civ_border_color="@color/primary_dark"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_image"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="@dimen/card_elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:paddingRight="@dimen/activity_horizontal_margin"
                            android:paddingTop="@dimen/activity_vertical_margin">

                            <EditText
                                android:id="@+id/register_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_email"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/action_sign_in"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/activity_horizontal_margin">

                            <EditText
                                android:id="@+id/register_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_password"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/action_sign_in"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="32dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="@dimen/card_elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/activity_vertical_margin">

                            <EditText
                                android:id="@+id/register_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_name"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/action_sign_in"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/activity_horizontal_margin"
                            android:paddingRight="@dimen/activity_horizontal_margin">

                            <EditText
                                android:id="@+id/register_ssn"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_ssn"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/action_sign_in"
                                android:imeOptions="actionUnspecified"
                                android:inputType="number"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                         <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/activity_horizontal_margin">

                            <EditText
                                android:id="@+id/register_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Birth Date"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/action_sign_in"
                                android:imeOptions="actionUnspecified"
                                android:cursorVisible="false"
                                android:inputType="date"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </RelativeLayout>


    </com.example.luis.asqqui.custom_views.NonFocusingScrollView>

</FrameLayout>

